tests/baselines/reference/subtypingWithObjectMembersAccessibility2.errors.txt
==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithObjectMembersAccessibility2.ts (6 errors) ====
    // Derived member is private, base member is not causes errors
    
    class Base {
        foo: string;
    }
    
    class Derived extends Base {
        bar: string;
    }
    
    module ExplicitPublic {
        class A {
            private foo: Base;
        }
    
        class B extends A {
              ~
!!! error TS2416: Class 'B' incorrectly extends base class 'A':
!!! error TS2416:   Private property 'foo' cannot be reimplemented.
            public foo: Derived; // error
        }
    
        class A2 {
            private 1: Base;
        }
    
        class B2 extends A2 {
              ~~
!!! error TS2416: Class 'B2' incorrectly extends base class 'A2':
!!! error TS2416:   Private property '1' cannot be reimplemented.
            public 1: Derived; // error
        }
    
        class A3 {
            private '1': Base;
        }
    
        class B3 extends A3 {
              ~~
!!! error TS2416: Class 'B3' incorrectly extends base class 'A3':
!!! error TS2416:   Private property ''1'' cannot be reimplemented.
            public '1': Derived; // error
        }
    }
    
    module ImplicitPublic {
        class A {
            private foo: Base;
        }
    
        class B extends A {
              ~
!!! error TS2416: Class 'B' incorrectly extends base class 'A':
!!! error TS2416:   Private property 'foo' cannot be reimplemented.
            foo: Derived; // error
        }
    
        class A2 {
            private 1: Base;
        }
    
        class B2 extends A2 {
              ~~
!!! error TS2416: Class 'B2' incorrectly extends base class 'A2':
!!! error TS2416:   Private property '1' cannot be reimplemented.
            1: Derived; // error
        }
    
        class A3 {
            private '1': Base;
        }
    
        class B3 extends A3 {
              ~~
!!! error TS2416: Class 'B3' incorrectly extends base class 'A3':
!!! error TS2416:   Private property ''1'' cannot be reimplemented.
            '1': Derived; // error
        }
    }